# VideoEye

./: .clang-format  .gitignore  Assistantmediainfo.cpp  BUILD_REPORT.md  CMakeLists.txt  Dataoutput.cpp  Dfanalysis.cpp  Dfanalysis.h  Dfanalysispic.cpp  Dfanalysispic.h  IMPLEMENTATION_SUMMARY.md  InputList.h  Optplayer.cpp  QUICKSTART.md  README.md  VideoEyeDlg.cpp  Videodecode.cpp  Videodecode.h  Welcome.cpp  build.bat  build.sh  run.sh  stdafx.cpp  vcpkg.json  ve_play.h
build-debug/: compile_commands.json
build-debug/VideoEye_autogen/: moc_predefs.h  mocs_compilation.cpp
build-debug/VideoEye_autogen/BDOFDOW4MI/: moc_MainWindow.cpp  moc_MainWindow.cpp.d
build-debug/VideoEye_autogen/HMPFPALHQB/: moc_AnalysisPanel.cpp  moc_AnalysisPanel.cpp.d
build-debug/VideoEye_autogen/RQH5VSWB3X/: moc_MediaPlayer.cpp  moc_MediaPlayer.cpp.d
core/analyzer/: FaceDetector.cpp  FaceDetector.h  FrameAnalyzer.cpp  FrameAnalyzer.h  StreamAnalyzer.cpp  StreamAnalyzer.h
core/model/: AnalysisEvent.h  AudioVisualizationFrame.h  FrameData.cpp  FrameData.h  PacketInfo.h  SyncSample.h  TimelineEvent.h
core/player/: Decoders.cpp  Decoders.h  MediaPlayer.cpp  MediaPlayer.h
docs/: ANALYZER_MODULES.md  ARCHITECTURE.md  CORE_CRASH_FIX.md  DEBUG_CRASH_ANALYSIS.md  DEBUG_GUIDE.md  INTEGRATION_COMPLETE.md  PROJECT_STRUCTURE.md  UI_GUIDE.md
legacy/: README.md
legacy/mfc_legacy/: Assistantmediainfo.h  Audiodecode.cpp  Audiodecode.h  Dataoutput.h  InputList.cpp  Optplayer.h  Rawanalysis.cpp  Rawanalysis.h  Sysinfo.cpp  Sysinfo.h  VideoEye.cpp  VideoEye.h  VideoEyeDlg.h  Welcome.h  cmdutils.cpp  cmdutils.h  stdafx.h  ve_play.cpp
scripts/: repro_audio_analysis.sh
ui/analysis_panel/: AnalysisPanel.cpp  AnalysisPanel.h
ui/app/: main.cpp
ui/main_window/: MainWindow.cpp  MainWindow.h
utils/: ConfigManager.cpp  ConfigManager.h  Logger.cpp  Logger.h  ReportExporter.cpp  ReportExporter.h
